May 22 2003  2.9.1  Absorbed kismet_monitor into kismet_server, changed suid
                     root behavior.  READ THE DOCS.
May 21 2003  2.9.1  First major rewrite to the packet path.  kismet_monitor
                     and kismet_hopper are still required.  See blog entry 
                     for more details.
                    Fixed flaw in alert protocol preventing the client from
                     reporting alerts at all.
                    Merged WSP100 keepalive patch from Chris Waters
May 18 2003  2.9.1  Added -fno-stack-prot to openbsd cflags
                    Fixed various DTD bits out of whack, uploaded devel DTDs
May 13 2003  2.9.1  Removed inline from packetracker MatchNetwork to make 
                     gcc-2.95.x play nice again (thanks Alexis)
May 08 2003  2.9.1  Updated configure to look for ethereal 0.9.12
May 01 2003  2.9.1  Integrated FSA alerts with packetracker code.
                    Internal changes to packetracker api
Apr 29 2003  2.9.1  First iteration of stateful packet inspection added - 
                     detection of probe-only clients who never join a network
Apr 24 2003  2.9.1  Tweaked cisco_cvs monitor scripts
Apr 22 2003  2.9.1  Fixed datasize counting (non-wepped packets weren't)
Apr 21 2003  2.9.1  Added 'comment' field to the netxml and gpsxml files
Apr 15 2003  2.9.1  Tweaked some of the BSD packet-munging code, added another
                     warning about freebsd.
Apr 10 2003  2.9.1  Changed 'kismet' script to use install paths to components
Apr 08 2003  2.9.1  Fixed display grouping code again, now it doesn't kill 
                     groups not active this session.
                    Fixed stupid ring buffer problem which caused drones to
                     break on large transmission chunks
Apr 07 2003  2.9.1  Fixed README numberings
                    Un-broke majorly broken display grouping code.
                    Moved conf files to configure-generated to pick up prefixes